--- a/api/env.development.yaml
+++ b/api/env.development.yaml
@@ -1,5 +1,12 @@
 # 测试环境配置文件
 
+#初始化配置
+system:
+  show_api_doc: true
+  show_php_error: true
+  open_request_log: false
+  open_api_debug: true
+
 db:
   database: interface_v1_dev
   host: localhost
@@ -9,5 +16,3 @@ db:
 
 mgk:
   url: www.baidu.com
-  param:
-    ds: ccccdd
