接口文档页面更新； 部分接口框架优化；

--- a/api/env.development.yaml
+++ b/api/env.development.yaml
@@ -4,7 +4,7 @@
 system:
   show_api_doc: true
   show_php_error: true
-  open_request_log: false
+  open_request_log: true
   open_api_debug: true
 
 db:
