--- a/api/env.development.yaml
+++ b/api/env.development.yaml
@@ -14,5 +14,7 @@ db:
   name: root
   password: eoner.com
 
-mgk:
-  url: www.baidu.com
+
+# jwt配置
+jwt:
+  secret: Ij7D046blU0Wy2bEiyMiQyZOhj/yl6vcsZYAdta/XgU=
