--- a/api/env.production.yaml
+++ b/api/env.production.yaml
@@ -1,11 +1,21 @@
 # 生产环境配置文件
 
+#初始化配置
+system:
+  show_api_doc: false
+  show_php_error: false
+  open_request_log: true
+  open_api_debug: false
+
+
 db:
-  database: interface.v1
+  database: interface_v1_dev
   host: localhost
   port: ""
   name: root
   password: eoner.com
 
-mgk:
-  url: www.baidu.com
+
+# jwt配置
+jwt:
+  secret: Ij7D046blU0Wy2bEiyMiQyZOhj/yl6vcsZYAdta/XgU=
