完善集成JWT； 新增:JWT header传递的key配置; 新增:base基类增加自动验证token获取member_id方法; 新增:优化入口文件部分方法;

--- a/api/.htaccess
+++ b/api/.htaccess
@@ -1,11 +1,13 @@
 <IfModule mod_rewrite.c>
  RewriteEngine on
+ # 开启$_SERVER 函数获取特殊header：Authorization的值
+ SetEnvIf Authorization .+ HTTP_AUTHORIZATION=$0
  
  DirectoryIndex index.html index.php
  
  RewriteCond %{REQUEST_FILENAME} !-d
  RewriteCond %{REQUEST_FILENAME} !-f
- 
+
  RewriteRule ^(.*[^/])$ $1/ 
  RewriteRule ^([^/]*)/(.*)/$ $1.$2/
  
