接口框架升级到 >=php7.4; 自定义函数库名称更新驼峰规范； 框架核心入口文件部分调整；

--- a/api/env.development.yaml
+++ b/api/env.development.yaml
@@ -2,18 +2,18 @@
 
 #初始化配置
 system:
-  show_api_doc: true
-  show_php_error: true
-  open_request_log: true
-  open_api_debug: true
+  show_api_doc: true # 是否开启api接口文档
+  show_php_error: true # 是否开启php报错
+  open_request_log: true # 是否开启请求报错日志
+  open_api_debug: true # 是否开启api debug模式
 
+# 数据库配置
 db:
   database: interface_v1_dev
   host: localhost
   port: ""
   name: root
   password: eoner.com
-
 
 # jwt配置
 jwt:
