一些基础调整优化

--- a/api/env.development.yaml
+++ b/api/env.development.yaml
@@ -2,10 +2,11 @@
 
 #初始化配置
 system:
-  show_api_doc: true # 是否开启api接口文档
-  show_php_error: true # 是否开启php报错
-  open_request_log: true # 是否开启请求报错日志
-  open_api_debug: true # 是否开启api debug模式
+  showApiDoc: true # 是否开启api接口文档
+  showPHPError: true # 是否开启php报错
+  openRequestLog: true # 是否开启请求报错日志
+  openApiDebug: true # 是否开启api debug模式
+  authFiled: token # 需要验证登录的字段名称
 
 # 数据库配置
 db:
