--- a/api/env.production.yaml
+++ b/api/env.production.yaml
@@ -2,19 +2,18 @@
 
 #初始化配置
 system:
-  show_api_doc: false
-  show_php_error: false
-  open_request_log: true
-  open_api_debug: false
+  showApiDoc: false # 是否开启api接口文档
+  showPHPError: false # 是否开启php报错
+  openRequestLog: true # 是否开启请求报错日志
+  openApiDebug: false # 是否开启api debug模式
 
-
+# 数据库配置
 db:
   database: interface_v1_dev
   host: localhost
   port: ""
   name: root
   password: eoner.com
-
 
 # jwt配置
 jwt:
